assets/css/main.css
/* Markdown */
:root{
--maincolor: red;
--bordercl:rebeccapurple;
--callouctcolor:#A6E3A2;
--hovercolor:navy;
--darkMaincolor: #CCA6F8;
--darkAccentcolor: #CCA6F8;
}
html {
  color: #232333;
  font-family: 'Roboto Mono', monospace;
  line-height: 1.6em;
}
body {
  margin: 8px;
}

p {
  font-family: 'Fira Sans', sans-serif;
  line-height: 1.5;
}

ul, ol, li {
  font-family: 'Fira Sans', sans-serif;
}

hr {
  border: 0;
  border-top: 3px dotted var(--bordercl);
  margin: 1em 0;
}

blockquote {
  border-left: 3px solid var(--bordercl);
  color: #737373;
  margin: 0;
  padding-left: 1em;
}

a {
  border-bottom: 3px solid var(--maincolor);
  color: inherit;
  text-decoration: none;
}
a:hover {
    background-color: var(--hovercolor);
    color: #fff;
}

 
/* Images */
img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
}

figure {
  box-sizing: border-box;
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;

  & figcaption {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    max-width: 500px;
  }
}

@media screen and (min-width: 600px) {
  figure {
    padding: 0 40px;
  }
}

figure h4 {
  font-size: 1rem;
  margin: 0;
  margin-bottom: 1em;
}
figure h4::before {
  content: '↳ ';
}

.highlight > pre {
  padding: 1rem;
}

/* Code blocks */
pre code {
  color: inherit;
}

code {
  font-family: 'IBM Plex Mono', monospace;
}

/* Containers */
.content {
  margin-bottom: 4em;
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  padding: 0 1ch;
  word-wrap: break-word;
}

/* Header */
header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 1em 0;
  line-height: 2.5em;
}

header .main {
  font-size: 1.5rem;
}
h1, h2, h3, h4, h5, h6 {
  font-size: 1.2rem;
  margin-top: 2em;
}

h1::before { color: var(--maincolor); content: '# '; }
h2::before { color: var(--maincolor); content: '## '; }
h3::before { color: var(--maincolor); content: '### '; }
h4::before { color: var(--maincolor); content: '#### '; }
h5::before { color: var(--maincolor); content: '##### '; }
h6::before { color: var(--maincolor); content: '###### '; }

.meta {
  color: #999;
  letter-spacing: -0.5px;
}

.toc {
  background-color: #ececec;
  color: #232333;
  padding: 10px;
  padding-bottom: 0;
  border-radius: 5px;
  display: inline-block;
}

/* Footer */
footer {
  display: flex;
  align-items: center;
  border-top: 0.4rem dotted var(--bordercl);
  padding: 2rem 0rem;
  margin-top: 2rem;
}
.soc {
  display: flex;
  align-items: center;
  border-bottom: none;
}
.border {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  border: 1px solid;
}
.footer-info {
  padding: var(--footer-padding);
}

/* Common */
.title h1 {
  margin-bottom: 0;
}

time {
  color: grey;
}

/* Posts */
article .title {
  margin-bottom: 1em;
}

h1.title {
  font-weight: bold;
  color: #e5e5e5;
  font-size: 1.3rem;
}

hr.list-item-separator {
  display: none;
}

hr.list-item-separator:not(:last-child) {
  border-top: 2px solid #313244;
  margin: 3em 0;
  display: block;
}


/* Callout */
.callout {
  background-color: var(--callouctcolor);
  color: #11111B;
  padding: 1em;
  border-radius: 6px;
}

.callout p {
  font-family: 'IBM Plex Mono', monospace;
  margin: 0;
}

.callout a {
  border-bottom: 3px solid #fff;
}

.callout a:hover {
  background-color: #fff;
  color: var(--callouctcolor);
}

.site-description {
display: flex;
justify-content: space-between;
}
.tags li::before{
  content: "🏷 ";
}
.tags a{
  border-bottom: 3px solid var(--maincolor); 
}
.tags a:hover{
  color:white;
  background-color: var(--hovercolor); 
}
svg{
  max-height: 15px;
}
.soc:hover{
  color: white;
}
.draft-label{ 
    color: var(--bordercl);
    text-decoration: none;
    padding: 2px 4px;
    border-radius: 4px;
    margin-left: 6px;
    background-color: #f9f2f4;
}

